# wip

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  wip-cookiecutter.json
api-reference/: index.html
docs/: api-reference.md  index.md  installation.md  overview.md  user-guide.md
installation/: index.html
overview/: index.html
search/: search_index.json
tests/wiptools/: mkdocs.yml  test_pyyaml.py  test_wiptools.py  test_wiptools_utils.py
tests/wiptools/cli/: helpers.py  test_helpers.py  test_wip.py  test_wip_init.py
tests/wiptools/wip/: helpers.py  test_wip_init.py
user-guide/: index.html
wiptools/: __init__.py  messages.py  tree.py  utils.py
wiptools/cli/: wip.py  wip_add.py  wip_add_project_doc.py  wip_build.py  wip_doc.py  wip_docs.py  wip_env.py  wip_info.py  wip_init.py
wiptools/cookiecutters/CLI-tests/{{cookiecutter.cli_name}}/: test_{{cookiecutter.cli_name}}.py
wiptools/cookiecutters/CLIsub-tests/cli/: test_{{cookiecutter.cli_name}}.py
wiptools/cookiecutters/CLIsub-tests/{{cookiecutter.cli_name}}/: test_{{cookiecutter.cli_name}}.py
wiptools/cookiecutters/module-cpp/{{cookiecutter.module_name}}/: CMakeLists.txt  {{cookiecutter.module_name}}.cpp
wiptools/cookiecutters/module-f90/{{cookiecutter.module_name}}/: CMakeLists.txt
wiptools/cookiecutters/project-doc-md/{{cookiecutter.project_name}}/: mkdocs.yml
wiptools/cookiecutters/project/{{cookiecutter.project_name}}/: README.md  pyproject.toml
wiptools/cookiecutters/project/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
wiptools/cookiecutters/submodule-py-tests/: cookiecutter.json
wiptools/cookiecutters/submodule-py-tests/{{cookiecutter.parent_module}}/{{cookiecutter.submodule_name}}/: test_{{cookiecutter.submodule_name}}.py
wiptools/cookiecutters/submodule-py/{{cookiecutter.submodule_name}}/: __init__.py
wiptools/mcgse/: __init__.py
wiptools/wip/: __main__.py  wip_add.py  wip_build.py  wip_bump.py  wip_docs.py  wip_env.py  wip_info.py  wip_init.py  wip_remote_repo.py
