[tool.poetry]
name = "wiptools"
version = "0.0.0"
description = "Python project management"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.md'

repository = "https://github.com/etijskens/wiptools"
homepage = "https://github.com/etijskens/wiptools"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
wip = 'wiptools:cli:wip.main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
