[tool.poetry]
name = "wiptools"
version = "0.0.1-dev"
description = "Python project management"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.md'

repository = "https://github.com/etijskens/wiptools"
homepage = "https://github.com/etijskens/wiptools"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
cookiecutter = "^2.1.1"
bump2version = "^1.0.1"
pyyaml = "^6.0"

[tool.poetry.scripts]
wip = 'wiptools:cli.wip.main'

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.3.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.16"
mkdocs-autorefs = "^0.4.1"

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"
